--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ html5lib==1.0b3
 newrelic==2.14.0.11
 oauthlib==0.6.1
 pymongo==2.6.3
+python-postmark==0.3.2
 python-twitter==1.3.1
 requests==2.2.1
 requests-oauthlib==0.4.0
