--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ disqus-python==0.4.2
 feedparser==5.1.3
 geopy==0.97
 html5lib==1.0b3
+httplib2==0.8
 newrelic==2.14.0.11
+oauth2==1.5.211
 oauthlib==0.6.1
 pymongo==2.6.3
 python-postmark==0.3.2
