--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ feedparser==5.1.3
 geopy==0.97
 html5lib==1.0b3
 httplib2==0.8
+mongoengine==0.8.7
 newrelic==2.14.0.11
 oauth2==1.5.211
 oauthlib==0.6.1
